--- a/src/product.css
+++ b/src/product.css
@@ -40,10 +40,71 @@ img{
     right: 30%;
 }
 
-button{
+nav{
     position: absolute;
-    top: 527px;
-    left: 361px;
+    width: 90vw;
+    height: 20vh;
+    top: 0%;
+    left: 5vw;
+    padding-top: 6vh;
+}
+
+.grape{
+    position: absolute;
+    font-family: Poppins;
+    font-size: 36px;
+    font-weight: 700;
+    color: white;
+    display: inline;
+}
+
+#options{
+    position:absolute;
+    height: 100%;
+    width: 30%;
+    left: 50%;
+    padding-top: 10px;
+}
+
+.option{
+    position: relative;
+    display: inline;
+    margin: 30px;
+
+    font-weight: 600;
+    font-size: 16px;
+    font-family: Poppins;
+
+}
+
+.option:hover{
+    cursor: pointer;
+    color: gray;
+}
+
+#login{
+    position: absolute;
+    height: 40px;
+    width: 175px;
+    right: 0px;
+}
+
+.container1{
+    position: relative;
+    padding-top: 10%px;
+    padding-left: 10%px;
+
+    width: 50vw;
+    height: 50vh;
+
+    left: 20vw;
+    top: 30vh;
+}
+
+button{
+    position: relative;
+    /* top: 527px;
+    left: 361px; */
     width: 249px;
     height: 60px;
 
@@ -57,12 +118,17 @@ button{
     font-size: 22px;
 }
 
+button:hover{
+    transition: 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+    cursor: pointer;
+    box-shadow: 0 0 10px rgb(36, 36, 36);
+}
+
 .title{
-    position: absolute;
+    position: relative;
     width: 539px;
     height: 192px;
-    left: 29.69%;
-    top: 48.16%;
+    margin-bottom: 25px;
     
     
     color: #212121;
