--- a/src/productListing.css
+++ b/src/productListing.css
@@ -180,6 +180,70 @@ button:hover{
     margin-bottom: 30px;
 }
 
+.productContainer{
+    position: absolute;
+    width: 100%;
+    top: 250vh;
+}
+
+.bigCard{
+    position:relative;
+    border-radius: 30px;
+    box-shadow: 0px 4px 20px 5px rgba(0, 0, 0, 0.15);
+    background-color: rgb(255, 255, 255);
+    overflow: hidden;
+
+    width: 369px;
+    height: 440px;
+
+    margin: 4vw;
+
+    display: inline-block;
+
+    transition: 0.5s ease-out;
+}
+
+.bigCard:hover{
+    cursor: pointer;
+    transition: 0.5s ease-out;
+    box-shadow: 0px 4px 20px 5px rgba(0, 0, 0, 0.415);;
+}
+
+.imgCard{
+    position: relative;
+    border-radius: 30px;
+    box-shadow: 0px 4px 20px 5px rgba(0, 0, 0, 0.15);
+    overflow: hidden;
+    height: 75%;
+    background-color: aliceblue;
+}
+
+.productImg{
+    width: 100%;
+    height: 100%;
+}
+
+.productName{
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 24px;
+    color: rgb(21, 21, 21);
+
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
+.productPrice{
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: 24px;
+    color: rgb(116, 116, 116);
+
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
+
 
 ::-webkit-scrollbar {
     display: none;
